<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity"
    >

    <TextView
        android:id="@+id/titleText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/simple_calculator"
        android:textSize="40sp"
        android:textColor="@color/Red"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <EditText
        android:id="@+id/number1"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:inputType="number"
        android:hint="@string/enter_the_first_number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleText"
        app:layout_constraintBottom_toTopOf="@id/number2"

        />
    <EditText
        android:id="@+id/number2"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/enter_the_second_number"
        app:layout_constraintTop_toBottomOf="@id/number1"
        app:layout_constraintBottom_toTopOf="@id/ops"

        />

    <LinearLayout
        android:id="@+id/ops"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/number2"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@id/resulttext"
        >
        <Button
            android:id="@+id/add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:textSize="20sp"/>
        <Button
            android:id="@+id/sub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
            android:text="@string/sub"
            android:textSize="20sp"/>
        <Button
            android:id="@+id/times"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/times"
            android:textSize="20sp"/>
        <Button
            android:id="@+id/div"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/div"
            android:textSize="20sp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/resulttext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="50sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ops"
  />

</androidx.constraintlayout.widget.ConstraintLayout>